--- a/index.html
+++ b/index.html
@@ -14,37 +14,32 @@
             <div class="w-2 h-2 bg-black"></div>
             <span class="text-lg font-medium">Tinglee❤️</span>
           </div>
-          <nav class="hidden md:flex items-center gap-8">
-            <a href="#" text-sm">Home</a>
-            <a href="#" text-sm">About</a>
-            <a href="#" text-sm">Features</a>
-            <a href="#"text-sm">Pricing</a>
           </nav>
 
-        <!--<nav class="hidden md:flex items-center gap-8">
-            <a href="#" class="text-gray-700 hover:text-gray-900 text-sm">Home</a>
-            <a href="#" class="text-gray-700 hover:text-gray-900 text-sm">About</a>
-            <a href="#" class="text-gray-700 hover:text-gray-900 text-sm">Features</a>
-            <a href="#" class="text-gray-700 hover:text-gray-900 text-sm">Pricing</a>
-          </nav>-->
+         <nav class="hidden md:flex items-center gap-15">
+            <a href="#" class="text-gray-700 hover:text-gray-900 text-sm" style="font-size: 15px;">Home</a>
+            <a href="#" class="text-gray-700 hover:text-gray-900 text-sm" style="font-size: 15px;">About</a>
+            <a href="#" class="text-gray-700 hover:text-gray-900 text-sm" style="font-size: 15px;">Features</a>
+            <a href="#" class="text-gray-700 hover:text-gray-900 text-sm" style="font-size: 15px;">Pricing</a>
+          </nav>
 
           <div class="hidden md:flex items-center gap-4">
-            <button class="px-6 py-2 text-sm font-medium text-white bg-pink-500 rounded-full hover:bg-pink-600 transition-colors">Sign Up</button>
-            <button class="text-sm font-medium text-gray-700 hover:text-gray-900">Log In</button>
+            <button class="px-6 py-2 text-sm font-medium text-white bg-pink-500 rounded-full hover:bg-pink-600 transition-colors" style="font-size: 18px;">Sign Up</button>
+            <button class="px-6 py-2 text-sm font-medium text-white bg-pink-500 rounded-full hover:bg-pink-600 transition-colors" style="font-size: 18px;">Log In</button>
           </div>
 
-          <button class="md:hidden" id="mobileMenuBtn">
+          <!--<button class="md:hidden" id="mobileMenuBtn">
             <svg class="w-6 h-6 text-gray-700" fill="none" stroke="currentColor" viewBox="0 0 24 24">
               <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 6h16M4 12h16M4 18h16"></path>
             </svg>
-          </button>
+          </button>-->
         </div>
       </div>
     </header>
 
     <section class="relative">
       <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-12 md:py-20">
-        <div class="relative rounded-3xl overflow-hidden bg-gradient-to-br from-gray-100 to-gray-200 h-96 md:h-screen flex items-center justify-center" style="background-image: url('https://images.pexels.com/photos/1181715/pexels-photo-1181715.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); background-size: cover; background-position: center;">
+        <div class="relative rounded-3xl overflow-hidden bg-gradient-to-br from-gray-100 to-gray-200 h-96 md:h-screen flex items-center justify-center" style="background-image: url('https://images.pexels.com/photos/1181715/pexels-photo-1181715.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2'); width: 100%; height: 500px; background-size: cover; background-position: center;">
           <div class="absolute inset-0 bg-black opacity-30"></div>
           <div class="relative z-10 text-center px-4 max-w-3xl">
             <h1 class="text-4xl md:text-6xl font-bold mb-4 text-white">Find Your Perfect Match</h1>
@@ -54,7 +49,7 @@
               Explore our platform designed to create authentic connections in a safe, engaging
               environment full of exciting interactions and dating experiences.
             </p>
-            <button class="px-8 py-3 text-white bg-pink-500 rounded-full hover:bg-pink-600 transition-colors font-medium">Get Started</button>
+            <button class="px-6 py-2 text-sm font-medium text-white bg-pink-500 rounded-full hover:bg-pink-600 transition-colors" style="font-size: 18px;">Get Started</button>
           </div>
         </div>
       </div>
@@ -114,7 +109,7 @@
           <a href="#" class="text-gray-600 hover:text-gray-900 text-sm">Privacy Policy</a>
           <a href="#" class="text-gray-600 hover:text-gray-900 text-sm">Contact Us</a>
         </div>
-        <div class="text-center text-sm text-gray-500">@2024 Connect. All rights reserved</div>
+        <div class="text-center text-sm text-gray-500">@2024 Tinglee❤️All rights reserved</div>
       </div>
     </footer>
 
